force-app/main/default/objects/Pet_Hotel__c/Pet_Hotel__c.object-meta.xml
<CustomObject>
    <label>Pet Hotel</label>
    <nameField>
        <label>Pet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pet Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>