force-app/main/default/objects/Pet_Hotel__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <label>Check In</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>