force-app/main/default/objects/Pet_Hotel__c/fields/Pet__c.field-meta.xml
<CustomField>
    <fullName>Pet__c</fullName>
    <label>Pet</label>
    <referenceTo>Pet__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>