force-app/main/default/objects/Pet_Hotel__c/fields/Pet_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Pet_Hotel__c</fullName>
    <label>Pet Hotel</label>
    <referenceTo>Actual_Pet_Hotel__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>