force-app/main/default/objects/Pet_Hotel__c/fields/Pet_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pet_Owner__c</fullName>
    <label>Pet Owner</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>