force-app/main/default/objects/Pet_Hotel__c/fields/Playtime_Activities__c.field-meta.xml
<CustomField>
    <fullName>Playtime_Activities__c</fullName>
    <label>Playtime Activities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Sliver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>