force-app/main/default/objects/Pet_Hotel__c/fields/Type_of_Pet__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Pet__c</fullName>
    <label>Type of Pet</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Alligator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>